<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/tvTotalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_above="@+id/tvSum"
        android:text="@string/total"
        android:textSize="25dp"
        />
    <TextView
        android:id="@+id/tvSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/amount"
        android:textSize="100dp"
        />
    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tvSum"
        android:text="@string/unknownCurrency"
        android:textSize="25dp"
        />

</RelativeLayout>